core: fixed a scrollbar overlapping the page contents in IE11.

--- a/frontend/app/core/assets/main.css
+++ b/frontend/app/core/assets/main.css
@@ -13,6 +13,7 @@
 body {
   cursor: default;
   overflow-y: scroll;
+  -ms-overflow-style: scrollbar;
 }
 body.modal-open {
   overflow-y: hidden;
